<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialogtime" />
    <TextView
        android:id="@+id/starttime_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/starttime" />

    <!-- 
        max=100,代表它的取值范围是0-100,共101个值;
        progress=10,代表默认值是10  
    -->
    <SeekBar
        android:id="@+id/seekbar_starttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="231"
        android:progress="80"
        />

    <TextView
        android:id="@+id/lasttime_txt"
        android:padding="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastime" />
    <SeekBar
        android:id="@+id/seekbar_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="241"
        android:progress="0"
        />



</LinearLayout>
